--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html">WEB STUDIO</a>
+        <a href="./index.html">WebStudio</a>
 
         <ul>
           <li><a href="#">Studio</a></li>
