--- a/index.html
+++ b/index.html
@@ -41,21 +41,21 @@
             </p>
           </li>
           <li>
-            <h3><a href="#">Punctuality </a></h3>
+            <h3>Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3><a href="#">Diligence</a></h3>
+            <h3>Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3><a href="#">Technologies</a></h3>
+            <h3>Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
