--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
       <section>
         <h2>What are we doing</h2>
         <ul>
-          <li><img src="images/img1.jpg" alt="PC" width="360" /></li>
-          <li><img src="images/img2.jpg" alt="Phone" width="360" /></li>
+          <li><img src="./images/img1.jpg" alt="PC" width="360" /></li>
+          <li><img src="./images/img2.jpg" alt="Phone" width="360" /></li>
           <li>
-            <img src="images/img3.jpg" alt="Phone And Laptop" width="360" />
+            <img src="./images/img3.jpg" alt="Phone And Laptop" width="360" />
           </li>
         </ul>
       </section>
@@ -78,7 +78,7 @@
         <ul>
           <li>
             <img
-              src="images/photo1.jpg"
+              src="./images/photo1.jpg"
               alt="Mark Guerrero Photo"
               width="264"
             />
@@ -87,13 +87,13 @@
           </li>
 
           <li>
-            <img src="images/photo2.jpg" alt="Tom Ford Photo" width="264" />
+            <img src="./images/photo2.jpg" alt="Tom Ford Photo" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img
-              src="images/photo3.jpg"
+              src="./images/photo3.jpg"
               alt="Camilla Garcia Photo"
               width="264"
             />
