--- a/index.html
+++ b/index.html
@@ -94,11 +94,17 @@
           <li>
             <img
               src="./images/photo3.jpg"
-              alt="Camilla Garcia Photo"
+              alt="Camila Garcia Photo"
               width="264"
             />
             <h3>Camilla Garcia</h3>
             <p>Marketing</p>
+          </li>
+          <li>
+            <img src="" alt="">
+              <h3></h3>
+              <p></p>
+            </img>
           </li>
         </ul>
       </section>
