--- a/index.html
+++ b/index.html
@@ -97,20 +97,20 @@
               alt="Camila Garcia Photo"
               width="264"
             />
-            <h3>Camilla Garcia</h3>
+            <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="" alt="">
-              <h3></h3>
-              <p></p>
+            <img src="./images/photo4.jpg" alt="Daniel Wilson Photo" width="264">
+              <h3>Daniel Wilson</h3>
+              <p>UI Designer</p>
             </img>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <a href="#">WEB STUDIO</a>
+      <a href="#">Web Studio</a>
 
       <p>
         Increase the flow of customers and sales for your business with digital
