--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       </section>
     </main>
     <footer>
-      <a href="#">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
 
       <p>
         Increase the flow of customers and sales for your business with digital
