--- a/index.html
+++ b/index.html
@@ -101,10 +101,13 @@
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/photo4.jpg" alt="Daniel Wilson Photo" width="264">
-              <h3>Daniel Wilson</h3>
-              <p>UI Designer</p>
-            </img>
+            <img
+              src="./images/photo4.jpg"
+              alt="Daniel Wilson Photo"
+              width="264"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
